[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

members = [
    "crates/*",
]

[workspace.package]
authors = ["Travis Finkenauer <tmfinken@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["games"]

[workspace.dependencies]
bevy = { version = "0.10.0", features = ["dynamic_linking"] }
bevy_prototype_lyon = "0.8.0"
