[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

members = [
    "crates/*",
]

[workspace.package]
authors = ["Travis Finkenauer <tmfinken@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["games"]

[workspace.dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy_prototype_lyon = "0.11.0"
clap = { version = "4.5.4", features = ["derive"] }
