[package]
name = "m-mazing-core"
version = "0.1.0"
edition = "2021"
authors = ["Travis Finkenauer <tmfinken@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["games"]
description = "Common logic for game based on Magic Maze"


[dependencies]
arrayvec = "0.7"
env_logger = "0.9"
log = "0.4"
thiserror = "1"

[dev-dependencies]
once_cell = "1.9"
