[package]
name = "m-mazing-core"
version = "0.1.0"
edition = "2021"
authors = ["Travis Finkenauer <tmfinken@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["games"]
description = "Common logic for game based on Magic Maze"

[features]
default = ["gui"]
gui = ["macroquad"]
log-rs = ["macroquad/log-rs"]

[dependencies]
arrayvec = "0.7"
cfg-if = "1.0"
env_logger = "0.9"
itertools = "0.10"
log = "0.4"
thiserror = "1"

[dependencies.macroquad]
#version = "0.3"
# pending https://github.com/not-fl3/macroquad/pull/356 (trace macro)
git = "https://github.com/tmfink/macroquad.git"
rev = "4e4c5fba9eee7e52a94c00b30e78cb8cea47ac9e"
optional = true
default-features = false

[dev-dependencies]
once_cell = "1.9"
