[package]
name = "m-mazing-core"
version = "0.1.0"
edition = "2021"
authors = ["Travis Finkenauer <tmfinken@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["games"]
description = "Common logic for game based on Magic Maze"

[features]
default = ["gui"]
gui = ["bevy"]

[dependencies]
arrayvec = "0.7"
bevy = { version = "0.6.0", features = ["dynamic"], optional = true }
cfg-if = "1.0"
env_logger = "0.9"
itertools = "0.10"
log = "0.4"
thiserror = "1"

[dev-dependencies]
once_cell = "1.9"
