[package]
name = "m-mazing-core"
version = "0.1.0"
description = "Common logic for game based on Magic Maze"
edition = "2021"

[dependencies]
arrayvec = "0.7"
bevy = { workspace = true }
bevy_prototype_lyon = { workspace = true }
cfg-if = "1.0"
itertools = "0.10"
thiserror = "1"

[dev-dependencies]
once_cell = "1.9"
