[package]
name = "m-mazing-tile-util"
version = "0.1.0"
edition = "2021"
authors = ["Travis Finkenauer <tmfinken@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["games"]

[dependencies]
m-mazing-core = { path = "../m-mazing-core" }

anyhow = "1.0"
clap = { version = "3", features = ["derive"] }
notify = { git = "https://github.com/notify-rs/notify", rev = "704e6d6678d3ce7103b8b7aec83455b9536a5337" }
