[package]
name = "m-mazing-tile-util"
version = "0.1.0"
edition = "2021"
authors = ["Travis Finkenauer <tmfinken@gmail.com>"]
license = "MIT OR Apache-2.0"
categories = ["games"]

[features]
default = ["gui", "log-rs"]
gui = ["m-mazing-core/gui"]
log-rs = ["m-mazing-core/log-rs"]

[dependencies]
m-mazing-core = { path = "../../core", default-features = false }

anyhow = "1.0"
cfg-if = "1.0"
clap = { version = "3", features = ["derive"] }
log = "0.4"
notify = { git = "https://github.com/tmfink/notify", branch = "add-impls" }
simple_logger = "1.16"
